--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import footerData from '../data/footer.json';
         <div class="mb-6">
           <a href="">
             <img class="max-w-[200px] lg:max-w-[311px] mx-auto text-center lg:text-start lg:mx-0"
-              src={footerData.logo} alt="footer logo">
+              src={footerData.logo.src} alt="footer logo">
           </a>
         </div>
         <p class="copyright opacity-30 text-white lg:text-sm text-center lg:text-start text-[11px]">
